# nl2sql-agent

./: .gitignore  README.md  pyproject.toml  test_cli_integration.py
app/: main.py
app/agents/: sql_agent.py
app/api/: query.py
app/cli/: __main__.py  app.py  favorites.py  history.py  i18n.py
app/core/: config.py  database.py  logging.py
app/schemas/: query.py
app/services/: llm.py
