[project]
name = "nl2sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=0.0.12",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"