[project]
name = "nl2sql-agent"
version = "0.1.0"
description = "NL2SQL Agent - Natural language to SQL query service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=48.0.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
